--- a/conf/php.ini
+++ b/conf/php.ini
@@ -9,6 +9,7 @@ post_max_size = 20M
 upload_max_filesize = 20M
 upload_tmp_dir = /tmp
 short_open_tag = Off
+extension=pthreads.so
 
 [Date]
 date.timezone = "Europe/Berlin"
